--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 		<link rel="stylesheet" href="css/css2/style.css"/>
 	</head>
 	<body>
-		<h1>This is how to put a file-in a-file-in a-file</h1>
-		<h2>file/file/style.css</h2>
-		<h2
-		<img src="images/images.jpg"/>
+		<a href="about/index.html">Click on about to go to next page</a>
+			<h1>This is how to put a file-in a-file-in a-file</h1>
+				<h2>file/file/style.css</h2>
+				<img src="images/images.jpg"/><img src="images/files.jpg"/>
 		<script src="script.js">
 		</script>
 	</body>
