--- a/about/index.html
+++ b/about/index.html
@@ -2,14 +2,16 @@
 <html>
 	<head>
 		<title>My Page</title>
-		<link rel="stylesheet" href="css/css2/style2.css"/>
+		<link rel="stylesheet" href="style2.css"/>
 	</head>
 	<body>
 		<h1>About</h1>
 			<h2>file/file/style.css</h2>
 				<a href="../index.html">Click here to go back</a>
-				<img src="images/images.jpg"/><img src="images/files.jpg"/>
+				<img src="images.jpg"/><img src="files.jpg"/>
 			<script src="script.js">
 		</script>
 	</body>
 </html>
+
+https://github.com/JacquelineSpain/week5files-within-files#
